# STT-Devellopement-Prompt-Enhancer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  DEV_SPEC.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SPRINT-1.md  SPRINT-2.md  SPRINT-3.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: defaults.yaml
docs/: PTT_PACKAGING_VISION.md  PTT_REQUIREMENTS.md  PTT_TODO_PLAN.md  SMOKE.md  TROUBLESHOOTING.md
examples/: EXAMPLE_OUTPUT.md
ops/launchd/: io.lazy.ptt.daemon.plist
ops/systemd/: lazy-ptt-daemon.service
scripts/: smoke.sh
src/lazy_ptt/: __init__.py  cli.py  config.py
src/lazy_ptt/api/: __init__.py  server.py
src/lazy_ptt/audio/: devices.py  recorder.py
src/lazy_ptt/data/: defaults.yaml
src/lazy_ptt/input/: hotkey.py
src/lazy_ptt/prompt/: enhancer.py  manager.py
src/lazy_ptt/services/: __init__.py  daemon.py  ptt_service.py
src/lazy_ptt/stt/: whisper.py
src/lazy_ptt_enhancer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/api/: test_api.py
tests/unit/: test_branding_config.py  test_daemon.py  test_prompt_enhancer.py  test_prompt_storage.py  test_ptt_service.py
